--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <img src="images/head.jpg" alt="" srcset="" />
       </aside>
       <p>Hari: Rabu, 20 April 2022
-        Waktu: 08.30 WIB s.d. selesai
-        <time> 20:00</time></p>
+        Waktu: <time> 08.30 WIB0</time> s.d. selesai
+        </p>
 
       <p>
         <address>Tempat: GKB V Lt.2 UNIB</address>
