--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="images/head.jpg" alt="" srcset="" />
       </aside>
       <p>Hari: Rabu, 20 April 2022
-        Waktu: <time> 08.30 WIB0</time> s.d. selesai
+        Waktu: <time> 08.30 WIB</time> s.d. selesai
         </p>
 
       <p>
